Don't shield the truth.