@@ -6,26 +6,40 @@ import com.gregtechceu.gtceu.api.machine.MetaMachine;
 import com.gregtechceu.gtceu.api.machine.trait.NotifiableRecipeHandlerTrait;
 import com.gregtechceu.gtceu.api.recipe.GTRecipe;
 
-import net.phoenix.core.api.capability.SourceRecipeCapability;
+import com.lowdragmc.lowdraglib.syncdata.annotation.DescSynced;
+import com.lowdragmc.lowdraglib.syncdata.annotation.Persisted;
+import com.lowdragmc.lowdraglib.syncdata.field.ManagedFieldHolder;
 
 import com.hollingsworth.arsnouveau.api.source.ISourceTile;
+import net.phoenix.core.api.capability.SourceRecipeCapability;
 import org.jetbrains.annotations.NotNull;
-import org.openjdk.nashorn.internal.objects.annotations.Getter;
 
 import java.util.Collections;
 import java.util.List;
 
 public class NotifiableSourceContainer extends NotifiableRecipeHandlerTrait<Integer> implements ISourceTile {
 
-    private final IO handlerIO;
-    private int storedSource;
-    private final int maxCapacity;
+    public static final ManagedFieldHolder MANAGED_FIELD_HOLDER = new ManagedFieldHolder(
+            NotifiableSourceContainer.class,
+            NotifiableRecipeHandlerTrait.MANAGED_FIELD_HOLDER);
 
-    public NotifiableSourceContainer(MetaMachine machine, IO io, int maxCapacity) {
+    @Persisted
+    @DescSynced
+    private int currentSource;
+
+    @Persisted
+    private int maxSource;
+
+    @Persisted
+    private int maxConsumption;
+
+    private final IO handlerIO;
+
+    public NotifiableSourceContainer(MetaMachine machine, IO io, int maxCapacity, int maxConsumption) {
         super(machine);
+        this.setMaxSource(maxCapacity);
+        this.maxConsumption = maxConsumption;
         this.handlerIO = io;
-        this.maxCapacity = maxCapacity;
-        this.storedSource = 0;
     }
 
     @Override
@@ -35,37 +49,31 @@ public class NotifiableSourceContainer extends NotifiableRecipeHandlerTrait<Inte
 
     @Override
     public List<Integer> handleRecipeInner(IO io, GTRecipe recipe, List<Integer> left, boolean simulate) {
-        int amount = left.stream().reduce(0, Integer::sum);
+        int remaining = left.stream().reduce(0, Integer::sum);
+
         if (io == IO.IN) {
-            // consume from this container
-            int canExtract = Math.min(amount, storedSource);
-            if (!simulate) {
-                storedSource -= canExtract;
-                notifyListeners();
-            }
-            amount -= canExtract;
+            // GT recipe wants to consume -> remove from container
+            int extracted = Math.min(remaining, currentSource);
+            if (!simulate) removeSource(extracted);
+            remaining -= extracted;
         } else if (io == IO.OUT) {
-            // insert into this container
-            int space = maxCapacity - storedSource;
-            int toInsert = Math.min(amount, space);
-            if (!simulate) {
-                storedSource += toInsert;
-                notifyListeners();
-            }
-            amount -= toInsert;
+            // GT recipe outputs -> insert into container
+            int inserted = Math.min(remaining, maxSource - currentSource);
+            if (!simulate) addSource(inserted);
+            remaining -= inserted;
         }
-        return amount <= 0 ? null : Collections.singletonList(amount);
+
+        return remaining <= 0 ? null : Collections.singletonList(remaining);
     }
 
-    @NotNull
     @Override
-    public List<Object> getContents() {
-        return Collections.singletonList(storedSource);
+    public @NotNull List<Object> getContents() {
+        return List.of(currentSource);
     }
 
     @Override
     public double getTotalContentAmount() {
-        return storedSource;
+        return currentSource;
     }
 
     @Override
@@ -73,85 +81,55 @@ public class NotifiableSourceContainer extends NotifiableRecipeHandlerTrait<Inte
         return SourceRecipeCapability.CAP;
     }
 
-    @Override
-    public int getSize() {
-        return 1;
-    }
-
-    @Getter
-    public int getStoredSource() {
-        return storedSource;
-    }
-
-    public void setStoredSource(int amount) {
-        this.storedSource = Math.min(amount, maxCapacity);
-        notifyListeners();
-    }
-
-    @Getter
-    public int getMaxCapacity() {
-        return maxCapacity;
-    }
-
-    //
-    // Ars Nouveau ISourceTile implementation for 1.20.1
-    //
-
+    // Ars Nouveau bridge
     @Override
     public int getTransferRate() {
-        return 1000;
+        return maxConsumption;
     }
 
     @Override
     public boolean canAcceptSource() {
-        return this.handlerIO == IO.IN;
-    }
-
-    public boolean canProvideSource() {
-        return this.handlerIO == IO.OUT;
+        // Corrected: The container can always accept source if it has space
+        return currentSource < maxSource;
     }
 
     @Override
     public int getSource() {
-        return this.storedSource;
+        return currentSource;
     }
 
     @Override
     public int getMaxSource() {
-        return this.maxCapacity;
+        return maxSource;
     }
 
     @Override
     public void setMaxSource(int max) {
-        // This is a placeholder as maxCapacity is final in your class.
-        // You can leave it empty or add logic to update if it were not final.
+        this.maxSource = max;
     }
 
     @Override
     public int setSource(int source) {
-        this.setStoredSource(source);
-        return this.storedSource;
+        this.currentSource = Math.min(source, maxSource);
+        notifyListeners();
+        return this.currentSource;
     }
 
     @Override
-    public int addSource(int source) {
-        if (this.handlerIO != IO.IN || !canAcceptSource()) {
-            return 0;
-        }
-        int inserted = Math.min(source, this.maxCapacity - this.storedSource);
-        this.storedSource += inserted;
-        this.notifyListeners();
+    public int addSource(int amount) {
+        // Corrected: Remove the check for handlerIO
+        int inserted = Math.min(amount, maxSource - currentSource);
+        currentSource += inserted;
+        notifyListeners();
         return inserted;
     }
 
     @Override
-    public int removeSource(int source) {
-        if (this.handlerIO != IO.OUT || !canProvideSource()) {
-            return 0;
-        }
-        int extracted = Math.min(source, this.storedSource);
-        this.storedSource -= extracted;
-        this.notifyListeners();
+    public int removeSource(int amount) {
+        // Corrected: Remove the check for handlerIO
+        int extracted = Math.min(amount, currentSource);
+        currentSource -= extracted;
+        notifyListeners();
         return extracted;
     }
 }
